# 8085

./: .gitignore  CMakeLists.txt  README.md  example_bubble_sort.asm  example_bubble_sort_preproc.asm  main.cpp  qml.qrc  qtquickcontrols2.conf
include/: assembler.h  cpu.h  doc_handler.h  highlighter.h  memory.h  misc.h  settings.h  simulator.h  types.h
qml/: Colors.qml  Debugger.qml  Editor.qml  EditorWindow.qml  MyButton.qml  MyMenu.qml  MyMenuBar.qml  MyMenuSeparator.qml  SettingsWindow.qml  SideBar.qml  ValueBox.qml  main.qml
src/: assembler.cpp  cpu.cpp  doc_handler.cpp  highlighter.cpp  memory.cpp  settings.cpp  simulator.cpp
